Fix center-align grid

--- a/defaults/grid.less
+++ b/defaults/grid.less
@@ -44,6 +44,7 @@
 
     &.cent-ali {
       display: block;
+      float: none;
       margin-left: auto;
       margin-right: auto;
       clear: both;
